--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
         "@angular/platform-browser": "^13.2.6",
         "@angular/platform-browser-dynamic": "^13.2.6",
         "@angular/router": "^13.2.6",
+        "@ng-bootstrap/ng-bootstrap": "^13.1.0",
         "@ngui/map": "0.30.3",
-        "@swimlane/ngx-charts": "^20.1.0",
         "@types/googlemaps": "3.40.5",
         "animate.css": "4.1.1",
         "arrive": "2.4.1",
@@ -37,7 +37,9 @@
         "core-js": "3.8.1",
         "googleapis": "66.0.0",
         "jquery": "3.5.1",
+        "ng-bootstrap": "^1.6.3",
         "perfect-scrollbar": "1.5.0",
+        "primeicons": "^6.0.1",
         "primeng": "^13.4.1",
         "rxjs": "^7.5.5",
         "zone.js": "~0.11.5"
