--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
           node-version: '19'
       - name: Build optimized web application
         run: |
-          npm ci
+          npm ci --legacy-peer-deps
           npm run build --prod
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
