--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,14 +26,28 @@ jobs:
     needs: build-test
 
     steps:
-      - uses: actions/checkout@v3
-        name: Checkout repository
-
-      - uses: pmorelli92/github-container-registry-build-push@2.0.0
-        name: Build and Publish latest container image
+      # Get the repository's code
+      - name: Checkout
+        uses: actions/checkout@v2
+      # https://github.com/docker/setup-qemu-action
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      # https://github.com/docker/setup-buildx-action
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to GHCR
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v1
         with:
-          github-push-secret: ${{ secrets.GITHUB_TOKEN }}
-          docker-image-name: fppss-frontend
-          docker-image-tag: latest # optional
-          dockerfile-path: ./Dockerfile # optional
-          build-context: ./ # optional
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64,darwin/arm64
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.<meta_id>.outputs.tags }}
+          labels: ${{ steps.<meta_id>.outputs.labels }}
