--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,7 +63,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/amd64,darwin/arm64
+          platforms: linux/amd64,linux/arm64v8
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.latest.outputs.tags }}
           labels: ${{ steps.latest.outputs.labels }}
