--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,44 +26,14 @@ jobs:
     needs: build-test
 
     steps:
-      # Get the repository's code
-      - name: Checkout
-        uses: actions/checkout@v2
-      # https://github.com/docker/setup-qemu-action
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      # https://github.com/docker/setup-buildx-action
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to GHCR
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v1
+      - uses: actions/checkout@v3
+        name: Checkout repository
+
+      - uses: pmorelli92/github-container-registry-build-push@2.0.0
+        name: Build and Publish latest container image
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Docker meta
-        id: latest # you'll use this in the next step
-        uses: docker/metadata-action@v3
-        with:
-          # list of Docker images to use as base name for tags
-          images: |
-            ghcr.io/2110780006/fppss-frontend
-          # Docker tags based on the following events/attributes
-          tags: |
-            type=schedule
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=sha
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          platforms: linux/amd64
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.latest.outputs.tags }}
-          labels: ${{ steps.latest.outputs.labels }}
+          github-push-secret: ${{ secrets.GITHUB_TOKEN }}
+          docker-image-name: fppss-frontend
+          docker-image-tag: latest # optional
+          dockerfile-path: ./Dockerfile # optional
+          build-context: ./ # optional
