--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "e2e": "ng e2e",
         "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
     },
+    "proxyConfig": "src/proxy.conf.json",
     "private": true,
     "dependencies": {
         "@angular/animations": "^13.2.6",
@@ -37,7 +38,10 @@
         "core-js": "3.8.1",
         "googleapis": "66.0.0",
         "jquery": "3.5.1",
+        "keycloak-angular": "^9.1.0",
+        "keycloak-js": "^16.1.1",
         "ng-bootstrap": "^1.6.3",
+        "ng-process-env": "^15.0.1",
         "perfect-scrollbar": "1.5.0",
         "primeicons": "^6.0.1",
         "primeng": "^13.4.1",
