--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,39 +1,39 @@
-name: build-and-archive-angular-app
-on: [push]
-jobs:
-  build-test:
-    runs-on: "ubuntu-latest"
-    steps:    
-      - name: Checkout repository
-        uses: "actions/checkout@v2"
-      - name: Setup Node-Environment
-        uses: "actions/setup-node@v2"
-        with:
-          node-version: '19'
-      - name: Build optimized web application
-        run: |
-          npm ci --legacy-peer-deps
-          npm run build --prod
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: dist
-          path: dist 
+# name: build-and-archive-angular-app
+# on: [push]
+# jobs:
+#   build-test:
+#     runs-on: "ubuntu-latest"
+#     steps:    
+#       - name: Checkout repository
+#         uses: "actions/checkout@v2"
+#       - name: Setup Node-Environment
+#         uses: "actions/setup-node@v2"
+#         with:
+#           node-version: '19'
+#       - name: Build optimized web application
+#         run: |
+#           npm ci --legacy-peer-deps
+#           npm run build --prod
+#       - name: Archive production artifacts
+#         uses: actions/upload-artifact@v3
+#         with:
+#           name: dist
+#           path: dist 
 
-  push_to_registry:
-    name: Push image to GitHub Container Registry
-    runs-on: ubuntu-latest
-    needs: build-test
+#   push_to_registry:
+#     name: Push image to GitHub Container Registry
+#     runs-on: ubuntu-latest
+#     needs: build-test
 
-    steps:
-      - uses: actions/checkout@v3
-        name: Checkout repository
+#     steps:
+#       - uses: actions/checkout@v3
+#         name: Checkout repository
 
-      - uses: pmorelli92/github-container-registry-build-push@2.0.0
-        name: Build and Publish latest container image
-        with:
-          github-push-secret: ${{ secrets.GITHUB_TOKEN }}
-          docker-image-name: fppss-frontend
-          docker-image-tag: latest # optional
-          dockerfile-path: ./Dockerfile # optional
-          build-context: ./ # optional
+#       - uses: pmorelli92/github-container-registry-build-push@2.0.0
+#         name: Build and Publish latest container image
+#         with:
+#           github-push-secret: ${{ secrets.GITHUB_TOKEN }}
+#           docker-image-name: fppss-frontend
+#           docker-image-tag: latest # optional
+#           dockerfile-path: ./Dockerfile # optional
+#           build-context: ./ # optional
