--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
         "bootstrap-notify": "3.1.3",
         "chart.js": "^3.9.1",
         "chartist": "0.11.4",
+        "chartjs-adapter-moment": "^1.0.1",
         "core-js": "3.8.1",
         "googleapis": "66.0.0",
         "jquery": "3.5.1",
         "keycloak-angular": "^9.1.0",
         "keycloak-js": "^16.1.1",
+        "moment": "^2.29.4",
         "ng-bootstrap": "^1.6.3",
         "ng-process-env": "^15.0.1",
         "perfect-scrollbar": "1.5.0",
